--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -2,3 +2,4 @@ masters = gentoo
 cache-formats = md5-dict pms
 thin-manifests = true
 manifest-hashes = SHA256 SHA512 WHIRLPOOL
+repo-name = shnurise
