--- a/dev-dotnet/buildtools/files/mono-Microsoft.DotNet.Build.Tasks.csproj
+++ b/dev-dotnet/buildtools/files/mono-Microsoft.DotNet.Build.Tasks.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Configuration\PropertyInfo.cs" />
     <Compile Include="FindBestConfigurations.cs" />
     <Compile Include="UpdateVSConfigurations.cs" />
+    <Compile Include="AV.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Strings.resx">
@@ -106,4 +107,15 @@
     <Reference Include="System.IO.Compression.FileSystem" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\MSBuild.Community.Tasks.Targets" />
+  <Target Name="BeforeBuild">
+    <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
+       <VersionNumber>1.0.27.0</VersionNumber>
+    </PropertyGroup>
+    <AssemblyInfo CodeLanguage="C#"
+      OutputFile="AV.cs" 
+      AssemblyVersion="$(VersionNumber)" 
+      AssemblyFileVersion="$(VersionNumber)"
+    />
+  </Target>
 </Project>
