--- a/dev-util/msbuild/files/mono-Microsoft.Build.csproj
+++ b/dev-util/msbuild/files/mono-Microsoft.Build.csproj
@@ -329,7 +329,7 @@
     <Compile Include="Collections\OrdinalIgnoreCaseKeyedComparer.cs" />
     <Compile Include="Collections\PropertyDictionary.cs" />
     <Compile Include="..\Shared\ReadOnlyCollection.cs" />
-    <Compile Include="Collections\ReadOnlyConvertingCollection.cs" />
+    <!--Compile Include="Collections\ReadOnlyConvertingCollection.cs" /-->
     <Compile Include="Collections\ReadOnlyConvertingDictionary.cs" />
     <Compile Include="Collections\Triple.cs" />
     <!-- ######################## -->
@@ -508,9 +508,9 @@
     <Compile Include="..\Shared\ReadOnlyEmptyDictionary.cs">
       <Link>SharedUtilities\ReadOnlyEmptyDictionary.cs</Link>
     </Compile>
-    <Compile Include="..\Shared\ReadOnlyEmptyList.cs">
+    <!--Compile Include="..\Shared\ReadOnlyEmptyList.cs">
       <Link>SharedUtilities\ReadOnlyEmptyList.cs</Link>
-    </Compile>
+    </Compile-->
     <Compile Include="..\Shared\AssemblyNameExtension.cs">
       <Link>SharedUtilities\AssemblyNameExtension.cs</Link>
     </Compile>
