injecting Csc task into .tasks

--- a/dev-util/msbuild/files/Microsoft.CSharp.Core.targets
+++ b/dev-util/msbuild/files/Microsoft.CSharp.Core.targets
@@ -80,35 +80,53 @@
       <UseSharedCompilation>true</UseSharedCompilation>
     </PropertyGroup>
 
-    <!-- Condition is to filter out the _CoreCompileResourceInputs so that it doesn't pass in culture resources to the compiler -->
+    <!-- Condition is to filter out the _CoreCompileResourceInputs so that it doesn't pass in culture resources to the compiler
+         AdditionalFiles="@(AdditionalFiles)"
+         Analyzers="@(Analyzer)"
+         ApplicationConfiguration="$(AppConfigForCompiler)"
+         ChecksumAlgorithm="$(ChecksumAlgorithm)"
+         CodeAnalysisRuleSet="$(ResolvedCodeAnalysisRuleSet)"
+         EmbeddedFiles="@(EmbeddedFiles)"
+         ErrorEndLocation="$(ErrorEndLocation)"
+         ErrorLog="$(ErrorLog)"
+         Features="$(Features)"
+         HighEntropyVA="$(HighEntropyVA)"
+         Instrument="$(Instrument)"
+         NoWin32Manifest="$(NoWin32Manifest)"
+         Deterministic="$(Deterministic)"
+         PublicSign="$(PublicSign)"
+         OutputRefAssembly="@(IntermediateRefAssembly)"
+         Prefer32Bit="$(Prefer32Bit)"
+         PreferredUILang="$(PreferredUILang)"
+         ProvideCommandLineArgs="$(ProvideCommandLineArgs)"
+         ReportAnalyzer="$(ReportAnalyzer)"
+         RuntimeMetadataVersion="$(RuntimeMetadataVersion)"
+         SkipCompilerExecution="$(SkipCompilerExecution)"
+         SubsystemVersion="$(SubsystemVersion)"
+         UseSharedCompilation="$(UseSharedCompilation)"
+         VsSessionGuid="$(VsSessionGuid)"
+         Win32Manifest="$(Win32Manifest)"
+         PathMap="$(PathMap)"
+         SourceLink="$(SourceLink)"
+      <Output TaskParameter="CommandLineArgs" ItemName="CscCommandLineArgs" />
+     -->
     <Csc Condition="'%(_CoreCompileResourceInputs.WithCulture)' != 'true'"
          AdditionalLibPaths="$(AdditionalLibPaths)"
          AddModules="@(AddModules)"
-         AdditionalFiles="@(AdditionalFiles)"
          AllowUnsafeBlocks="$(AllowUnsafeBlocks)"
-         Analyzers="@(Analyzer)"
-         ApplicationConfiguration="$(AppConfigForCompiler)"
          BaseAddress="$(BaseAddress)"
          CheckForOverflowUnderflow="$(CheckForOverflowUnderflow)"
-         ChecksumAlgorithm="$(ChecksumAlgorithm)"
-         CodeAnalysisRuleSet="$(ResolvedCodeAnalysisRuleSet)"
          CodePage="$(CodePage)"
          DebugType="$(DebugType)"
          DefineConstants="$(DefineConstants)"
          DelaySign="$(DelaySign)"
          DisabledWarnings="$(NoWarn)"
          DocumentationFile="@(DocFileItem)"
-         EmbeddedFiles="@(EmbeddedFiles)"
          EmitDebugInformation="$(DebugSymbols)"
          EnvironmentVariables="$(CscEnvironment)"
-         ErrorEndLocation="$(ErrorEndLocation)"
-         ErrorLog="$(ErrorLog)"
          ErrorReport="$(ErrorReport)"
-         Features="$(Features)"
          FileAlignment="$(FileAlignment)"
          GenerateFullPaths="$(GenerateFullPaths)"
-         HighEntropyVA="$(HighEntropyVA)"
-         Instrument="$(Instrument)"
          KeyContainer="$(KeyContainerName)"
          KeyFile="$(KeyOriginatorFile)"
          LangVersion="$(LangVersion)"
@@ -118,41 +136,25 @@
          NoConfig="true"
          NoLogo="$(NoLogo)"
          NoStandardLib="$(NoCompilerStandardLib)"
-         NoWin32Manifest="$(NoWin32Manifest)"
          Optimize="$(Optimize)"
-         Deterministic="$(Deterministic)"
-         PublicSign="$(PublicSign)"
          OutputAssembly="@(IntermediateAssembly)"
-         OutputRefAssembly="@(IntermediateRefAssembly)"
          PdbFile="$(PdbFile)"
          Platform="$(PlatformTarget)"
-         Prefer32Bit="$(Prefer32Bit)"
-         PreferredUILang="$(PreferredUILang)"
-         ProvideCommandLineArgs="$(ProvideCommandLineArgs)"
          References="@(ReferencePathWithRefAssemblies)"
-         ReportAnalyzer="$(ReportAnalyzer)"
          Resources="@(_CoreCompileResourceInputs);@(CompiledLicenseFile)"
          ResponseFiles="$(CompilerResponseFile)"
-         RuntimeMetadataVersion="$(RuntimeMetadataVersion)"
-         SkipCompilerExecution="$(SkipCompilerExecution)"
          Sources="@(Compile)"
-         SubsystemVersion="$(SubsystemVersion)"
          TargetType="$(OutputType)"
          ToolExe="$(CscToolExe)"
          ToolPath="$(CscToolPath)"
          TreatWarningsAsErrors="$(TreatWarningsAsErrors)"
          UseHostCompilerIfAvailable="$(UseHostCompilerIfAvailable)"
-         UseSharedCompilation="$(UseSharedCompilation)"
          Utf8Output="$(Utf8Output)"
-         VsSessionGuid="$(VsSessionGuid)"
          WarningLevel="$(WarningLevel)"
          WarningsAsErrors="$(WarningsAsErrors)"
          WarningsNotAsErrors="$(WarningsNotAsErrors)"
          Win32Icon="$(ApplicationIcon)"
-         Win32Manifest="$(Win32Manifest)"
-         Win32Resource="$(Win32Resource)"
-         PathMap="$(PathMap)"
-         SourceLink="$(SourceLink)">
+         Win32Resource="$(Win32Resource)">
       <Output TaskParameter="CommandLineArgs" ItemName="CscCommandLineArgs" />
     </Csc>
 
