--- a/dev-dotnet/msbuild-tasks-api/files/mono-Microsoft.Build.Framework.csproj
+++ b/dev-dotnet/msbuild-tasks-api/files/mono-Microsoft.Build.Framework.csproj
@@ -204,7 +204,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MSBuild.Community.Tasks.Targets" />
+  <Import Project="$(MSBuildExtensionsPath)\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
   <Target Name="BeforeBuild">
     <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
        <VersionNumber>15.3</VersionNumber>
