--- a/dev-dotnet/npgsql/files/template.csproj
+++ b/dev-dotnet/npgsql/files/template.csproj
@@ -31,6 +31,7 @@
     <Reference Include="System.Runtime" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Common" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Threading.Tasks" />
     <Reference Include="System.Threading.Tasks.Extensions" />
