--- a/dev-util/msbuild/files/15.4.8/mono-Microsoft.Build.csproj
+++ b/dev-util/msbuild/files/15.4.8/mono-Microsoft.Build.csproj
@@ -329,7 +329,7 @@
     <Compile Include="Collections\OrdinalIgnoreCaseKeyedComparer.cs" />
     <Compile Include="Collections\PropertyDictionary.cs" />
     <Compile Include="..\Shared\ReadOnlyCollection.cs" />
-    <!--Compile Include="Collections\ReadOnlyConvertingCollection.cs" /-->
+    <Compile Include="Collections\ReadOnlyConvertingCollection.cs" />
     <Compile Include="Collections\ReadOnlyConvertingDictionary.cs" />
     <Compile Include="Collections\Triple.cs" />
     <!-- ######################## -->
@@ -508,9 +508,9 @@
     <Compile Include="..\Shared\ReadOnlyEmptyDictionary.cs">
       <Link>SharedUtilities\ReadOnlyEmptyDictionary.cs</Link>
     </Compile>
-    <!--Compile Include="..\Shared\ReadOnlyEmptyList.cs">
+    <Compile Include="..\Shared\ReadOnlyEmptyList.cs">
       <Link>SharedUtilities\ReadOnlyEmptyList.cs</Link>
-    </Compile-->
+    </Compile>
     <Compile Include="..\Shared\AssemblyNameExtension.cs">
       <Link>SharedUtilities\AssemblyNameExtension.cs</Link>
     </Compile>
@@ -613,8 +613,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
-    <Reference Include="Microsoft.Build.Framework, Version=15.3.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
-      <Package>msbuild-tasks-api-15.3</Package>
+    <Reference Include="Microsoft.Build.Framework, Version=15.4.8.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
+      <Package>msbuild-tasks-api-15.4.8</Package>
     </Reference>
     <Reference Include="System.Threading.Tasks.Dataflow" />
     <Reference Include="System.Collections.Immutable, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
@@ -624,10 +624,10 @@
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MSBuild.Community.Tasks.Targets" />
+  <Import Project="/usr/lib/mono/xbuild/MSBuildCommunityTasks/MSBuild.Community.Tasks.Targets" />
   <Target Name="BeforeBuild">
     <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
-      <VersionNumber>15.3</VersionNumber>
+      <VersionNumber>15.4.8</VersionNumber>
     </PropertyGroup>
     <AssemblyInfo CodeLanguage="C#" OutputFile="AV.cs" AssemblyVersion="$(VersionNumber)" AssemblyFileVersion="$(VersionNumber)" />
   </Target>
