--- a/dev-util/msbuild/files/15.4.8/mono-Microsoft.Build.csproj
+++ b/dev-util/msbuild/files/15.4.8/mono-Microsoft.Build.csproj
@@ -613,9 +613,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
-    <Reference Include="Microsoft.Build.Framework, Version=15.4.8.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
-      <Package>msbuild-tasks-api-15.4.8</Package>
-    </Reference>
+    <Reference Include="Microsoft.Build.Framework, Version=15.4.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <Reference Include="System.Threading.Tasks.Dataflow" />
     <Reference Include="System.Collections.Immutable, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <Package>system-collections-immutable-2.0.0_pre</Package>
