--- a/dev-dotnet/msbuild-tasks-api/files/15.7.180.61344/mono-Microsoft.Build.Framework.csproj
+++ b/dev-dotnet/msbuild-tasks-api/files/15.7.180.61344/mono-Microsoft.Build.Framework.csproj
@@ -32,144 +32,14 @@
     <DefineConstants>STANDALONEBUILD</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\Shared\Constants.cs">
-      <Link>Constants.cs</Link>
+      <Compile Include="..\Shared\Constants.cs">
+      <Link>Shared\Constants.cs</Link>
     </Compile>
-    <Compile Include="AssemblyInfo.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
+    <Compile Include="..\Shared\BinaryWriterExtensions.cs">
+      <Link>Shared\BinaryWriterExtensions.cs</Link>
     </Compile>
-    <Compile Include="BuildEngineResult.cs" />
-    <Compile Include="BuildErrorEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="BuildEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="BuildFinishedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="BuildMessageEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="BuildStartedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="BuildStatusEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="BuildWarningEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="CriticalBuildMessageEventArgs.cs" />
-    <Compile Include="CustomBuildEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="ExternalProjectFinishedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="ExternalProjectStartedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="FxCopExclusions\Microsoft.Build.Framework.Suppressions.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="IBuildEngine3.cs" />
-    <Compile Include="IBuildEngine4.cs" />
-    <Compile Include="IBuildEngine5.cs" />
-    <Compile Include="IEventSource2.cs" />
-    <Compile Include="IGeneratedTask.cs" />
-    <Compile Include="LazyFormattedBuildEventArgs.cs" />
-    <Compile Include="IBuildEngine.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="IBuildEngine2.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="IEventRedirector.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="IEventSource.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="IForwardingLogger.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="ILogger.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="INodeLogger.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="ITask.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="ICancelableTask.cs" />
-    <Compile Include="ITaskFactory.cs" />
-    <Compile Include="ITaskFactory2.cs" />
-    <Compile Include="ITaskHost.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="ITaskItem.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="ITaskItem2.cs" />
-    <Compile Include="LoadInSeparateAppDomainAttribute.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="LoggerException.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="BuildEventContext.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="OutputAttribute.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="ProjectEvaluationFinishedEventArgs.cs" />
-    <Compile Include="ProjectEvaluationStartedEventArgs.cs" />
-    <Compile Include="ProjectImportedEventArgs.cs" />
-    <Compile Include="ProjectFinishedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="ProjectStartedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="Sdk\SdkReference.cs" />
-    <Compile Include="RequiredAttribute.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="RequiredRuntimeAttribute.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="RunInMTAAttribute.cs" />
-    <Compile Include="RunInSTAAttribute.cs" />
-    <Compile Include="Sdk\SdkLogger.cs" />
-    <Compile Include="Sdk\SdkResolver.cs" />
-    <Compile Include="Sdk\SdkResolverContext.cs" />
-    <Compile Include="Sdk\SdkResult.cs" />
-    <Compile Include="Sdk\SdkResultFactory.cs" />
-    <Compile Include="TargetFinishedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="TargetStartedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="TaskCommandLineEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="TaskFinishedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="TaskPropertyInfo.cs" />
-    <Compile Include="TaskStartedEventArgs.cs">
-      <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="TelemetryEventArgs.cs" />
-    <None Include="Event args classes.cd" />
-    <None Include="project.json" />
-    <!-- Win32 RC Files -->
-    <RCResourceFile Include="native.rc" />
-    <Compile Include="AV.cs" />
+     <Compile Include="**\*.cs" Exclude="XamlTypes\*" />
+     <Compile Include="AV.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(FeatureXamlTypes)' == 'true'">
     <Compile Include="XamlTypes\Argument.cs" />
