--- a/dev-util/msbuild/files/15.7.180.61344/mono-MSBuild.csproj
+++ b/dev-util/msbuild/files/15.7.180.61344/mono-MSBuild.csproj
@@ -16,7 +16,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <LargeAddressAware>true</LargeAddressAware>
     <WarningLevel>4</WarningLevel>
-    <DefineConstants>FEATURE_ASSEMBLY_LOADFROM;STANDALONEBUILD;FEATURE_APPDOMAIN;FEATURE_OSVERSION;FEATURE_APPDOMAIN;FEATURE_APPDOMAIN_UNHANDLED_EXCEPTION</DefineConstants>
+    <DefineConstants>FEATURE_ASSEMBLY_LOADFROM;STANDALONEBUILD;FEATURE_APPDOMAIN;FEATURE_OSVERSION;FEATURE_APPDOMAIN;FEATURE_APPDOMAIN_UNHANDLED_EXCEPTION;FEATURE_BINARY_SERIALIZATION</DefineConstants>
   </PropertyGroup>
   <!-- Default configurations to help VS understand the configurations -->
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -87,9 +87,8 @@
     <Compile Include="..\Shared\FileUtilities.GetFolderPath.cs">
       <Link>FileUtilities.GetFolderPath.cs</Link>
     </Compile>
-    <Compile Include="..\Shared\FileUtilitiesRegex.cs">
-      <Link>FileUtilitiesRegex.cs</Link>
-    </Compile>
+    <Compile Include="..\Shared\FileUtilitiesRegex.cs" />
+    <Compile Include="..\Shared\IConstrainedEqualityComparer.cs" />
     <Compile Include="..\Shared\QuotingUtilities.cs" />
     <Compile Include="..\Shared\RegisteredTaskObjectCacheBase.cs">
       <Link>RegisteredTaskObjectCacheBase.cs</Link>
@@ -104,7 +103,6 @@
     <Compile Include="..\Shared\IKeyed.cs" />
     <Compile Include="..\Shared\MSBuildNameIgnoreCaseComparer.cs" />
     <Compile Include="..\Shared\ReadOnlyEmptyCollection.cs" />
-    <Compile Include="..\Shared\ReadOnlyEmptyList.cs" />
     <Compile Include="..\Shared\ReadOnlyEmptyDictionary.cs" />
     <Compile Include="..\Shared\NativeMethodsShared.cs" />
     <Compile Include="..\Shared\AssemblyUtilities.cs" />
@@ -167,15 +165,14 @@
     <ProjectReference Include="..\Build\mono-Microsoft.Build.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Build.Framework, Version=15.7.180.61344, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
-      <Package>msbuild-tasks-api-15.7.180.61344</Package>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Reflection.Metadata, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <Package>system-reflection-metadata-2.0.0_pre</Package>
     </Reference>
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation" />
+    <Reference Include="Microsoft.Build.Framework, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="/usr/lib/mono/xbuild/MSBuildCommunityTasks/MSBuild.Community.Tasks.Targets" />
