--- a/dev-util/msbuild/files/15.9.20.62856/mono-MSBuild.csproj
+++ b/dev-util/msbuild/files/15.9.20.62856/mono-MSBuild.csproj
@@ -68,6 +68,7 @@
     <Compile Condition="'$(NetCoreBuild)' == 'true'" Include="..\Shared\Compat\SafeHandleZeroOrMinusOneIsInvalid.cs">
       <Link>Compat\SafeHandleZeroOrMinusOneIsInvalid.cs</Link>
     </Compile>
+    <Compile Include="..\Shared\FileSystem\*.cs" />
     <Compile Include="..\Shared\BuildEnvironmentHelper.cs">
       <Link>BuildEnvironmentHelper.cs</Link>
     </Compile>
@@ -83,9 +84,6 @@
     </Compile>
     <Compile Include="..\Shared\FileUtilities.cs">
       <Link>FileUtilities.cs</Link>
-    </Compile>
-    <Compile Include="..\Shared\FileUtilities.GetFolderPath.cs">
-      <Link>FileUtilities.GetFolderPath.cs</Link>
     </Compile>
     <Compile Include="..\Shared\FileUtilitiesRegex.cs" />
     <Compile Include="..\Shared\IConstrainedEqualityComparer.cs" />
@@ -172,7 +170,7 @@
       <Package>system-reflection-metadata-2.0.0_pre</Package>
     </Reference>
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation" />
-    <Reference Include="Microsoft.Build.Framework, Version=15.7.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <Reference Include="Microsoft.Build.Framework, Version=15.9.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="/usr/lib/mono/xbuild/MSBuildCommunityTasks/MSBuild.Community.Tasks.Targets" />
